--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "node-fetch": "^2.6.7",
     "express": "^4.18.2"
   }
