--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "node-fetch": "^2.6.7",
+    "mongoose": "^6.2.1",
     "express": "^4.18.2"
   }
 }
