--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,10 @@
   "routes": [
     { "src": "/messages", "dest": "server.js" },
     { "src": "/admin/clear", "dest": "server.js" },
+    { "src": "/requests", "dest": "server.js" },
+    { "src": "/admin/requests", "dest": "server.js" },
+    { "src": "/admin/requests/:id", "dest": "server.js" },
     { "src": "/", "dest": "index.html" },
     { "src": "/admin", "dest": "admin.html" }
-  ],
-  "functions": {
-        "api/messages": {
-            "memory": 512
-        }
-  }
+  ]
 }
